Fix firefox scrollbars on consumables and inventory

--- a/style/view/InventoryInventoryView.scss
+++ b/style/view/InventoryInventoryView.scss
@@ -5,6 +5,7 @@
 			display: grid;
 			grid-template-columns: repeat(10, auto);
 			grid-template-rows: repeat(5, auto);
+			overflow: hidden;
 		}
 	}
 
